# MSQECC-Framework

./: .gitignore  Distinguishing_Vacuum_Entanglement_Noise.md  GITHUB_README.md  MSQECC Framework Archive Feb2026.docx  MSQECC_Paragon_Synthesis.md  MSQECC_Version_IX_Addendum.md  MSQECC_Version_VIII_Empirical_Era_Kimani.md  README.md  VERIFICATION_README.md  analyze_msqecc.py  analyze_residuals.py  compare_models.py  comparison_report.md  computations_scratchpad.py  correlation_results.txt  derive_k.py  derive_k_theoretical.py  derive_remaining_constants.py  first_principles_solution.md  optimize_v8_global.py  phase1_comparison.txt  quantum_noise_test_local.py  refine_k_weighting.py  simulate_quantum_discovery.py  test_environmental_variance.py  verify_sparc_msqecc.py
Lumina/src-tauri/: Cargo.toml  tauri.conf.json
Lumina/src-tauri/crates/lumina-privacy/: Cargo.toml
Lumina/src-tauri/crates/lumina-privacy/src/: lib.rs
Lumina/src-tauri/crates/lumina-vault/: Cargo.toml
Lumina/src-tauri/crates/lumina-vault/src/: lib.rs
Lumina/src-tauri/src/: engine.rs  lib.rs  models.rs  system_metrics.rs
Lumina/src-tauri/target-production-check/: .rustc_info.json
Lumina/src-tauri/target-production-check/debug/.fingerprint/adler2-6586caa2360024ca/: lib-adler2  lib-adler2.json
Lumina/src-tauri/target-production-check/debug/.fingerprint/adler2-848c7795595b4eee/: lib-adler2  lib-adler2.json
Lumina/src-tauri/target-production-check/debug/.fingerprint/ahash-52937878aa822457/: lib-ahash  lib-ahash.json
Lumina/src-tauri/target-production-check/debug/.fingerprint/aho-corasick-33010bb26b753d34/: lib-aho_corasick  lib-aho_corasick.json
Lumina/src-tauri/target-production-check/debug/.fingerprint/aho-corasick-7ec4c481ab2c3642/: lib-aho_corasick  lib-aho_corasick.json
Lumina/src-tauri/target-production-check/debug/.fingerprint/aligned-e6e245220b615504/: lib-aligned  lib-aligned.json
Lumina/src-tauri/target-production-check/debug/.fingerprint/aligned-vec-65db8238f3372d58/: lib-aligned_vec  lib-aligned_vec.json
(+1762 files in other folders)
