[package]
name = "lumina"
version = "0.1.0"
description = "Lumina — The MSQECC OS Symbiote"
authors = ["MSQECC Labs"]
edition = "2021"

[lib]
name = "lumina_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
sysinfo = "0.33"
chrono = "0.4"
